## Changelog

## master

- Add: Documentation
- Change it to support python >= 3.6
- Update requirement in the setup.py

## v0.1.1

- Add Mesos Executor
- Make container type configurable and add TTY for UCR container

## v0.1.0:
  Creation